--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "React GraphQL event booking app",
   "main": "index.js",
   "scripts": {
+    "server": "node app.js",
+    "client": "npm start --prefix client",
+    "dev": "nodemon ./server.js",
     "start": "node app.js"
   },
-  "author": "Nabendu Biswas",
+  "author": "Syvolia Mary",
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -21,6 +24,7 @@
     "pm2": "^4.2.3"
   },
   "devDependencies": {
+    "concurrently": "^5.1.0",
     "nodemon": "^2.0.2"
   }
 }
